--- a/.gitignore
+++ b/.gitignore
@@ -7,8 +7,11 @@
 .Trashes
 ehthumbs.db
 Thumbs.db
-**/xcuserdata/
 
 # Readme Stuff #
 ######################
 Logo.png
+
+# XCode #
+######################
+Wilson.xcworkspace/xcuserdata/*
